package observable;

public interface Observer {

    void update();

}
